ignore changes to submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "msgraph-tools-migration"]
 	path = msgraph-tools-migration
 	url = https://github.com/microsoftgraph/msgraph-tools-migration.git
+	ignore = all
