Rolled back CI build made changes to weekly preview build

--- a/.azure-pipelines/weekly-preview-generation.yml
+++ b/.azure-pipelines/weekly-preview-generation.yml
@@ -49,7 +49,7 @@ schedules:
     displayName: "PS SDK Preview Weekly Refresh"
     branches:
       include:
-        - features/2.0
+        - migration-tool-publisher
     always: true
 jobs:
   - job: RefreshOpenAPIDocuments
@@ -78,17 +78,22 @@ jobs:
           TargetBranch: $(WeeklyBranch)
       - template: ./common-templates/install-tools.yml
       - template: ./common-templates/security-pre-checks.yml
-      - template: ./generation-templates/authentication-module.yml
-        parameters:
-          Test: ${{ parameters.Test }}
-          Pack: ${{ parameters.Pack }}
-          Sign: ${{ parameters.Sign }}
-      - template: ./generation-templates/workload-modules.yml
-        parameters:
-          Test: ${{ parameters.Test }}
-          Pack: ${{ parameters.Pack }}
-          Sign: ${{ parameters.Sign }}
-      - template: ./generation-templates/meta-module.yml
+      # - template: ./generation-templates/authentication-module.yml
+      #   parameters:
+      #     Test: ${{ parameters.Test }}
+      #     Pack: ${{ parameters.Pack }}
+      #     Sign: ${{ parameters.Sign }}
+      # - template: ./generation-templates/workload-modules.yml
+      #   parameters:
+      #     Test: ${{ parameters.Test }}
+      #     Pack: ${{ parameters.Pack }}
+      #     Sign: ${{ parameters.Sign }}
+      # - template: ./generation-templates/meta-module.yml
+      #   parameters:
+      #     Test: ${{ parameters.Test }}
+      #     Pack: ${{ parameters.Pack }}
+      #     Sign: ${{ parameters.Sign }}
+      - template: ./generation-templates/migration-tool.yml
         parameters:
           Test: ${{ parameters.Test }}
           Pack: ${{ parameters.Pack }}
