--- a/.azure-pipelines/weekly-preview-generation.yml
+++ b/.azure-pipelines/weekly-preview-generation.yml
@@ -51,7 +51,7 @@ schedules:
       include:
         - migration-tool-publisher
     always: true
-# jobs:
+jobs:
 #   - job: RefreshOpenAPIDocuments
 #     displayName: Refresh OpenApi documents
 #     timeoutInMinutes: 240
